[project]
name = "cute-comfy"
description = "Adds a configurable folder watcher that auto-converts Comfy metadata into a Civitai-friendly format for automatic resource tagging when you upload images. Oh, and it makes your UI awesome, too. 💜"
version = "1.0.0"
license = "LICENSE"
dependencies = ["colorama", "pyyaml", "watchdog", "pillow", "requests"]

[project.urls]
Repository = "https://github.com/zer0TF/cute-comfy"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "cute-comfy"
Icon = ""
